--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"ip":"fskhri.aternos.me",
-	"port": "25565",
-	"name": "AchanServer",
+	"ip":"DarkDevilto69-9iOA.aternos.me",
+	"port": "25550",
+	"name": "OPERATORBOT",
 	"auto-night-skip":"false"
 }
